--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
 
 <head>
-<title>test</title>
-
-
+    <title>test</title>
+    <link rel="stylesheet" href="index.css">
+    <script type="module" src="index.js"></script>
 </head>
 
-<h1>Test page</h1>
+<header>
+    <div class="page-title">S-N-A-K-E</div>
+    <button id="backbtn">BACK</button>
+</header>
 
-<form action="https://kasepuu.github.io">
-    <input type="submit" value="Home"/>
-</form>
+<body>
+    <canvas class="the-field" id="field" width="400" height="400"></canvas>
+</body>
+
 
 </html>
