--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
-    <title>test</title>
+    <title>S-N-A-K-E</title>
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
+    <link rel="icon" href="https://raw.githubusercontent.com/kasepuu/kasepuu.github.io/refs/heads/main/icon.svg" type="image/x-icon" />
 </head>
 
 <header>
